--- a/css/mobile.css
+++ b/css/mobile.css
@@ -127,13 +127,25 @@ li:nth-child(6) {
     opacity: 0;
 }
 
+li:nth-child(7) {
+    animation-delay: 12s;
+    opacity: 0;
+}
+
+/* IR AL HUB */
+.hub-box {
+    text-align: center;
+    /* display: none; */
+    /* background: red; */
+    position: relative;
+    top: 300px;
+}
+
 .link-hub {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     font-size: 35px;
-    position: absolute;
-    display: none;
-    top: 50px;
+    text-align: center;
 }
 
 .link-hub:hover {
@@ -141,17 +153,22 @@ li:nth-child(6) {
 }
 
 .mostrarHub {
-    animation-name: mostrarHub 1s;
-    animation-delay: 1s;
+    animation-name: mostrarHub;
+    animation-duration: 1s;
+    animation-delay: 14s;
+    animation-fill-mode: forwards;
+    display: block;
 }
 
 @keyframes mostrarHub {
-    from {
-        display: none;
-    }
-    to {
-        display: block;
-    }
+from {
+    color: #000;
+}
+to {
+    opacity: 1;
+    color: #fff;
+}
+
 }
 
 @keyframes cambiarTexto {
