--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     overflow: hidden;
     text-align: center;
@@ -15,8 +19,25 @@ body {
 /* GIF DEL COFRE */
 .cofre {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 0;
+    animation-name: animarCofre;
+    animation-duration: 5s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+
+}
+
+@keyframes animarCofre {
+    0% {
+        margin: 0;
+    }
+    50% {
+        margin-top: 500px;
+    }
+    100% {
+        margin: 0;
+    }
 }
 
 .ocultarGif {
@@ -46,6 +67,7 @@ body {
 
 .luther-box {
     display: none;
+    margin-bottom: 100px;
 }
 
 .mostrarLuther {
@@ -69,6 +91,7 @@ body {
 
 .luther-texto {
     width: 100%;
+    margin: auto;
     display: none;
     justify-content: center;
     align-items: center;
@@ -135,10 +158,7 @@ li:nth-child(7) {
 /* IR AL HUB */
 .hub-box {
     text-align: center;
-    /* display: none; */
-    /* background: red; */
-    position: relative;
-    top: 300px;
+    display: none;
 }
 
 .link-hub {
@@ -157,16 +177,17 @@ li:nth-child(7) {
     animation-duration: 1s;
     animation-delay: 14s;
     animation-fill-mode: forwards;
+    visibility: hidden;
     display: block;
 }
 
 @keyframes mostrarHub {
 from {
-    color: #000;
+    opacity: 0;
 }
 to {
     opacity: 1;
-    color: #fff;
+    visibility: visible;
 }
 
 }
@@ -181,7 +202,7 @@ to {
         transform: translateZ(0);
     }
 
-    27.8%, 100% {
+    27.4%, 100% {
         opacity: 0;
         transform: translate3d(-50px, 0, 50px);
     }
